[package]
name = "raft-nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
bincode = "1.3"
rand = "*"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json"] }
serde_json = "1.0"
